--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -76,5 +76,12 @@
         <item name="switchTextAppearance">@style/TextAppearance.MarketApp.BodySmall</item>
     </style>
 
+    <style name="Widget.Market.Settings.CheckBox" parent="Widget.Material3.CompoundButton.CheckBox">
+        <item name="android:textAppearance">@style/TextAppearance.MarketApp.LabelSmall</item>
+        <item name="android:background">@null</item>
+        <item name="android:foreground">?selectableItemBackground</item>
+        <item name="android:textAlignment">viewStart</item>
+    </style>
+
 
 </resources>
