--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -84,4 +84,22 @@
     </style>
 
 
+    <style name="Widget.Market.Settings.OutlinedBox.ExposedDropdownMenu" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+        <item name="android:paddingTop">@dimen/space_very_small</item>
+        <item name="android:paddingBottom">@dimen/space_very_small</item>
+        <item name="materialThemeOverlay">
+            @style/Widget.Market.Settings.OutlinedBox.ExposedDropdownMenu.themeOverlay
+        </item>
+
+    </style>
+
+    <style name="Widget.Market.Settings.OutlinedBox.ExposedDropdownMenu.themeOverlay" parent="@style/ThemeOverlay.MaterialComponents.AutoCompleteTextView.OutlinedBox">
+        <item name="fontFamily">@font/samim_fd</item>
+        <item name="android:textSize">@dimen/_10ssp</item>
+        <item name="maxLines">1</item>
+        <item name="android:inputType">number</item>
+        <item name="android:maxLength">3</item>
+    </style>
+
+
 </resources>
