feat(settings): Add settings screen to main graph and fix switch button animation

--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -95,6 +95,11 @@
             android:label="SortingFragment" />
 
     </navigation>
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="ir.jatlin.topmarket.ui.settings.SettingsFragment"
+        android:label="SettingsFragment"
+        tools:layout="@layout/fragment_settings" />
 
 
 </navigation>
