--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -81,7 +81,7 @@
             android:paddingVertical="@dimen/cart_button_vertical_padding"
             android:text="@string/sign_in_digikala"
             app:cornerRadius="@dimen/space_small"
-            app:layout_constraintBottom_toTopOf="@+id/view"
+            app:layout_constraintBottom_toTopOf="@+id/register_loading"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -90,12 +90,15 @@
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/register_loading"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="@dimen/space_medium"
+            android:layout_marginTop="@dimen/space_small"
             android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="@id/register_customer"
-            app:layout_constraintEnd_toStartOf="@id/register_customer"
-            app:layout_constraintStart_toEndOf="@id/register_customer"
-            app:layout_constraintTop_toTopOf="@id/register_customer"
+            app:layout_constraintBottom_toTopOf="@id/view"
+            app:layout_constraintEnd_toEndOf="@id/register_customer"
+            app:layout_constraintStart_toStartOf="@id/register_customer"
+            app:layout_constraintTop_toBottomOf="@id/register_customer"
+            app:layout_constraintVertical_bias="0.3"
+            app:layout_constraintWidth_percent="0.5"
             app:lottie_autoPlay="true"
             app:lottie_rawRes="@raw/loading_animation"
             app:lottie_repeatMode="reverse" />
@@ -104,6 +107,7 @@
         <View
             android:id="@+id/view"
             style="@style/Divider"
+            android:layout_marginTop="@dimen/space_medium"
             android:layout_marginBottom="@dimen/space_medium"
             app:layout_constraintBottom_toTopOf="@id/privacy"
             app:layout_constraintEnd_toEndOf="parent"
