--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -269,6 +269,7 @@
 
 
                     <androidx.appcompat.widget.LinearLayoutCompat
+                        android:id="@+id/similar_products_constainer"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginTop="@dimen/space_medium"
@@ -298,6 +299,170 @@
                             tools:listitem="@layout/product_item_view" />
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/product_review_container"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/space_small"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/similar_products_constainer">
+
+
+                        <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/tv_reviews"
+                            style="@style/TextAppearance.MarketApp.TitleMedium"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/space_medium"
+                            android:layout_marginEnd="@dimen/space_medium"
+                            android:text="@string/product_reviews"
+                            android:textStyle="bold"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/tv_reviews_count"
+                            style="@style/TextAppearance.MarketApp.TitleSmall"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="start"
+                            android:layout_marginStart="@dimen/space_medium"
+                            android:layout_marginTop="@dimen/space_medium"
+                            android:text="@string/product_reviews_count"
+                            android:textColor="?attr/colorAccent"
+                            android:textStyle="bold"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:text="5 نظر" />
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/product_reviews"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:clipToPadding="false"
+                            android:orientation="horizontal"
+                            android:padding="@dimen/space_small"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            app:layout_constraintTop_toBottomOf="@id/tv_reviews"
+                            app:reverseLayout="true"
+                            tools:listitem="@layout/product_review_item_view" />
+
+
+                        <androidx.constraintlayout.widget.Barrier
+                            android:id="@+id/barrier_reviews_bottom"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            app:barrierDirection="top"
+                            app:constraint_referenced_ids="product_reviews,tv_reviews"
+                            app:layout_constraintTop_toBottomOf="@id/product_reviews" />
+
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/add_review_container"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fitsSystemWindows="true"
+                            android:padding="@dimen/space_medium"
+                            android:stateListAnimator="@animator/smooth_fading"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/barrier_reviews_bottom">
+
+                            <androidx.appcompat.widget.AppCompatImageView
+                                android:id="@+id/iv_comment"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/ic_comment"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+
+                            <com.google.android.material.textview.MaterialTextView
+                                android:id="@+id/tv_add_review"
+                                style="@style/TextAppearance.MarketApp.BodySmall"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginHorizontal="@dimen/space_small"
+                                android:text="@string/add_reviews_here"
+                                app:layout_constraintEnd_toStartOf="@id/iv_comment"
+                                app:layout_constraintStart_toEndOf="@id/iv_add_comment"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <androidx.appcompat.widget.AppCompatImageView
+                                android:id="@+id/iv_add_comment"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/ic_arrow_left"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+
+                            <com.google.android.material.textview.MaterialTextView
+                                android:id="@+id/tv_badge"
+                                style="@style/TextAppearance.MarketApp.LabelMedium"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/space_small"
+                                android:text="@string/get_badges"
+                                app:layout_constraintEnd_toEndOf="@id/tv_add_review"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@id/tv_add_review" />
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <View
+                        android:id="@+id/comment_divider"
+                        style="@style/Divider"
+                        android:layout_marginHorizontal="@dimen/space_medium"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/product_review_container" />
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/add_question_container"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fitsSystemWindows="true"
+                        android:padding="@dimen/space_medium"
+                        android:stateListAnimator="@animator/smooth_fading"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/comment_divider">
+
+                        <androidx.appcompat.widget.AppCompatImageView
+                            android:id="@+id/iv_question"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_question"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+
+                        <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/tv_add_question"
+                            style="@style/TextAppearance.MarketApp.BodySmall"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="@dimen/space_small"
+                            android:text="@string/add_reviews_here"
+                            app:layout_constraintEnd_toStartOf="@id/iv_question"
+                            app:layout_constraintStart_toEndOf="@id/iv_add_question"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <androidx.appcompat.widget.AppCompatImageView
+                            android:id="@+id/iv_add_question"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_arrow_left"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
