--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_graph.xml"
+    android:id="@+id/main_graph"
     app:startDestination="@id/homeFragment">
 
     <fragment
@@ -86,6 +86,11 @@
                 app:enterAnim="@anim/nav_default_enter_anim"
                 app:exitAnim="@anim/nav_default_exit_anim"
                 app:popUpTo="@id/homeFragment" />
+            <argument
+                android:name="includeIds"
+                android:defaultValue="@null"
+                app:argType="string"
+                app:nullable="true" />
 
 
         </fragment>
