fix(view): Fix some problems

--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -90,6 +90,7 @@
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/register_loading"
             android:layout_width="0dp"
+            android:visibility="gone"
             android:layout_height="@dimen/space_medium"
             android:layout_marginTop="@dimen/space_small"
             android:scaleType="centerCrop"
