--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,6 +60,7 @@
 
     <style name="Widget.Market.BottomNavigationView" parent="Widget.Material3.BottomNavigationView">
         <item name="fontFamily">@font/samim_fd</item>
+        <item name="android:fontFamily">@font/samim_fd</item>
         <item name="itemTextAppearance">@style/TextAppearance.MarketApp.BodySmall</item>
     </style>
 
