--- a/app/src/main/res/layout/fragment_search_filters.xml
+++ b/app/src/main/res/layout/fragment_search_filters.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    >
 
 
     <include
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/space_medium"
-        android:paddingVertical="@dimen/space_small"
+        android:paddingVertical="@dimen/space_medium"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:listitem="@layout/product_preview_item_view" />
