feat(purchase-view): Create new layout for signing guides

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,5 +22,8 @@
     <!-- Settings -->
     <dimen name="setting_title_text_size">@dimen/_16ssp</dimen>
 
+    <!-- purchase -->
+    <dimen name="purchase_register_item_height">@dimen/_96sdp</dimen>
+
 
 </resources>
